# test-task-ya

./: .gitignore  README.md
backend/: Dockerfile  docker-compose.yaml  entrypoint.sh  pyproject.toml
backend/api/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/api/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
infra/: sample.env
